--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,13 +26,13 @@ jobs:
           HEADLESS: true
       - name: Load API Config
         run: |
-            echo 'REACT_APP_API_KEY=${{ secrets.FIREBASE_API_KEY }}' >> config/.env.production
-            echo 'REACT_APP_AUTH_DOMAIN=${{ secrets.FIREBASE_AUTH_DOMAIN }}' >> config/.env.production
-            echo 'REACT_APP_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}' >> config/.env.production
-            echo 'REACT_APP_STORAGE_BUCKET=${{ secrets.FIREBASE_STORAGE_BUCKET }}' >> config/.env.production
-            echo 'REACT_APP_MESSAGING_SENDER_ID=${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}' >> config/.env.production
-            echo 'REACT_APP_APP_ID=${{ secrets.FIREBASE_APP_ID }}' >> config/.env.production
-            echo 'REACT_APP_MEASUREMENT_ID=${{ secrets.FIREBASE_MEASUREMENT_ID }}' >> config/.env.production
+            echo 'FIREBASE_API_KEY=${{ secrets.FIREBASE_API_KEY }}' >> config/.env.production
+            echo 'FIREBASE_AUTH_DOMAIN=${{ secrets.FIREBASE_AUTH_DOMAIN }}' >> config/.env.production
+            echo 'FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}' >> config/.env.production
+            echo 'FIREBASE_STORAGE_BUCKET=${{ secrets.FIREBASE_STORAGE_BUCKET }}' >> config/.env.production
+            echo 'FIREBASE_APP_ID=${{ secrets.FIREBASE_APP_ID }}' >> config/.env.production
+            echo 'FIREBASE_MEASUREMENT_ID=${{ secrets.FIREBASE_MEASUREMENT_ID }}' >> config/.env.production
+            echo 'FIREBASE_DATABASE_URL=${{ secrets.FIREBASE_DATABASE_URL }}' >> config/.env.production
       - name: Build
         run: |
           npm run build
