--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -97,10 +97,10 @@ jobs:
                   auth_provider_x509_cert_url: $auth_provider_x509_cert_url, 
                   client_x509_cert_url: $client_x509_cert_url 
               }' > devConfig.json
+              cd functions
         - name: Deploy Firebase functions
           if: github.ref == 'refs/heads/master'        
           uses: w9jds/firebase-action@master
-          working-directory: functions
           with:
             args: deploy --only functions
           env:
