--- a/functions/package.json
+++ b/functions/package.json
@@ -20,10 +20,18 @@
     "firebase-functions": "^3.10.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@types/jest": "^25.2.2",
+    "babel-jest": "^26.0.1",
+    "babel-loader": "^8.1.0",
     "eslint": "^5.12.0",
     "eslint-plugin-promise": "^4.0.1",
     "firebase-functions-test": "^0.2.0",
+    "given2": "^2.1.7",
     "jest": "^26.4.0",
+    "jest-plugin-context": "^2.9.0",
     "supertest": "^4.0.2"
   },
   "private": true
